--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,4 +123,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
