--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,4 +143,5 @@ dependencies {
     compile 'com.tencent.bugly:crashreport:1.2.9'
     // 后续更新SDK，请直接更新版本号
     compile project(':library')
+    compile files('libs/xstream-1.4.7.jar')
 }
